<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="600dp"
    android:layout_gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/mainStyle"
        android:layout_weight="1"
        android:id="@+id/editTextView"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        style="@style/mainStyle"
        android:id="@+id/radioLinerLayout">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editorRadioGroup"
            >

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/mainStyle"
                android:text="@string/upper_case"
                android:id="@+id/uppercaseRadioButton"

                />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/mainStyle"
                android:text="@string/lower_case"
                android:id="@+id/lowercaseRadioButton"

                />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/mainStyle"
                android:text="@string/init_capitalization"
                android:id="@+id/initRadioButton"

                />


        </RadioGroup>



    </LinearLayout>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        style="@style/mainStyle"
        android:text="@string/reverse_text"
        android:id="@+id/reverseCheckBox"

        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/mainStyle"
        android:text="@string/save"
        android:layout_gravity="center"
        android:layout_marginBottom="20sp"
        android:id="@+id/submitButton"

        />


</LinearLayout>