<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/mainStyle"
        android:layout_marginTop="150dp"
        android:autofillHints="username"
        android:hint="@string/edit_text_here"
        android:id="@+id/mainEditText"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainEditText"
        style="@style/mainStyle"
        android:id="@+id/mainTextView"

        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainTextView"
        style="@style/mainStyle"
        android:text="@string/edit_text"
        android:layout_marginStart="130dp"
        android:id="@+id/editButton"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/mainStyle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/editor_app"
        android:textAlignment="center"
        android:textAllCaps="true"

        />

</androidx.constraintlayout.widget.ConstraintLayout>